--- a/package.json
+++ b/package.json
@@ -18,32 +18,32 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.48.0",
     "@payloadcms/next": "3.48.0",
     "@payloadcms/payload-cloud": "3.48.0",
     "@payloadcms/richtext-lexical": "3.48.0",
     "@payloadcms/ui": "3.48.0",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
-    "graphql": "^16.8.1",
+    "graphql": "^16.11.0",
     "next": "15.3.2",
     "payload": "3.48.0",
     "react": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-postgres": "3.48.0"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
     "@testing-library/react": "16.3.0",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.16.5",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react": "4.5.2",
-    "eslint": "^9.16.0",
+    "eslint": "^9.31.0",
     "eslint-config-next": "15.3.0",
     "jsdom": "26.1.0",
     "playwright": "1.50.0",
     "playwright-core": "1.50.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.6.2",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
