--- a/package.json
+++ b/package.json
@@ -23,13 +23,21 @@
     "@payloadcms/payload-cloud": "3.48.0",
     "@payloadcms/richtext-lexical": "3.48.0",
     "@payloadcms/ui": "3.48.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.11.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "payload": "3.48.0",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "sharp": "0.34.2"
+    "sharp": "0.34.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@playwright/test": "1.50.0",
@@ -44,6 +52,7 @@
     "playwright": "1.50.0",
     "playwright-core": "1.50.0",
     "prettier": "^3.6.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
