--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@payloadcms/ui": "3.52.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.12",
+    "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^10.0.0",
